# migratorxpress-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
src/: __init__.py  migratorxpress.py  server.py  validators.py  version.py
tests/: test_command_builder.py  test_validators.py  test_version.py
