[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migratorxpress-mcp"
version = "0.1.2"
description = "A Model Context Protocol (MCP) server for MigratorXpress, enabling database migration between heterogeneous database systems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Arpe.io" },
]
keywords = ["mcp", "model-context-protocol", "migratorxpress", "database", "migration", "schema", "etl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
migratorxpress-mcp = "src.server:main"

[project.urls]
Homepage = "https://aetperf.github.io/MigratorXpress-Documentation/"
Repository = "https://github.com/arpe-io/migratorxpress-mcp"
Issues = "https://github.com/arpe-io/migratorxpress-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ty.environment]
python = "/home/francois/miniconda3/envs/py313/bin/python3"
